- Implemented new design of "Mail Contacts" page - Made refactoring on email client handling - Made refactoring on sync process of conversations with API

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -167,4 +167,8 @@
 "AOL Mail" = "AOL Mail";
 "iCloud" = "iCloud";
 "Mail.ru" = "Mail.ru";
-"Emails" = "Emails";
+"Mail Contacts" = "Mail Contacts";
+"NEW" = "NEW";
+"Sent Audio Message" = "Sent Audio Message";
+"Received Audio Message" = "Received Audio Message";
+"Search" = "Search";
