- Added proper error message to handle the case if a message can not be played.

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -172,3 +172,4 @@
 "Sent Audio Message" = "Sent Audio Message";
 "Received Audio Message" = "Received Audio Message";
 "Search" = "Search";
+"Audio message could not be played. Please check your connection and try again." = "Audio message could not be played. Please check your connection and try again.";
