- Added support for saving transcription to server

--- a/Peppermint/pt-PT.lproj/Text.strings
+++ b/Peppermint/pt-PT.lproj/Text.strings
@@ -181,3 +181,5 @@
 "Welcome Back" = "Bem vindo de volta";
 "Log in" = "Entrar";
 "Forgot password?" = "Esqueceu a senha?";
+
+"Transcription Language" = "en-US";
