--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -182,3 +182,5 @@
 "Welcome Back" = "Tekrar Hoşgeldiniz";
 "Log in" = "Oturum aç";
 "Forgot password?" = "Unuttunuz mu?";
+
+"Transcription Language" = "en-US";
