- Added Language support for transcription - Fixed typo error on transcription title text

--- a/Peppermint/Base.lproj/Text.strings
+++ b/Peppermint/Base.lproj/Text.strings
@@ -184,6 +184,6 @@
 "Forgot password?" = "Forgot password?";
 
 
-"AUTOMATIC TRANSCTIPTION" = "AUTOMATIC TRANSCTIPTION";
+"AUTOMATIC TRANSCRIPTION" = "AUTOMATIC TRANSCRIPTION";
 "Transcription Language" = "en-US";
 
