--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -183,4 +183,4 @@
 "Log in" = "Oturum aç";
 "Forgot password?" = "Unuttunuz mu?";
 
-"Transcription Language" = "en-US";
+"Transcription Language" = "tr-TR";
