- Updated language selection for transcription

--- a/Peppermint/Base.lproj/Text.strings
+++ b/Peppermint/Base.lproj/Text.strings
@@ -184,5 +184,5 @@
 "Forgot password?" = "Forgot password?";
 "ago" = "ago";
 "AUTOMATIC TRANSCRIPTION" = "AUTOMATIC TRANSCRIPTION";
-"Transcription Language" = "en-US";
+"Transcription Preffered Default Language" = "en-US";
 
