--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -183,5 +183,5 @@
 "Log in" = "Oturum aç";
 "Forgot password?" = "Unuttunuz mu?";
 "ago" = "önce";
-"AUTOMATIC TRANSCRIPTION" = "AUTOMATIC TRANSCRIPTION";
-"Transcription Language" = "tr-TR";
+"AUTOMATIC TRANSCRIPTION" = "Öngörülen Çeviri";
+"Transcription Preffered Default Language" = "tr-TR";
