- Updated "Automatic Transcription" to "Transcription"

--- a/Peppermint/Base.lproj/Text.strings
+++ b/Peppermint/Base.lproj/Text.strings
@@ -183,6 +183,6 @@
 "Log in" = "Log in";
 "Forgot password?" = "Forgot password?";
 "ago" = "ago";
-"AUTOMATIC TRANSCRIPTION" = "AUTOMATIC TRANSCRIPTION";
+"AUTOMATIC TRANSCRIPTION" = "TRANSCRIPTION";
 "Transcription Preffered Default Language" = "en-US";
 
