--- a/Peppermint/pt-PT.lproj/Text.strings
+++ b/Peppermint/pt-PT.lproj/Text.strings
@@ -183,5 +183,5 @@
 "Forgot password?" = "Esqueceu a senha?";
 
 "ago" = "atrás";
-"AUTOMATIC TRANSCRIPTION" = "Transcrição Automática";
+"AUTOMATIC TRANSCRIPTION" = "Transcrição";
 "Transcription Preffered Default Language" = "pt-BR";
