- Minor corrections on translation

--- a/Peppermint/Base.lproj/Text.strings
+++ b/Peppermint/Base.lproj/Text.strings
@@ -186,3 +186,4 @@
 "AUTOMATIC TRANSCRIPTION" = "TRANSCRIPTION";
 "Transcription Preffered Default Language" = "en-US";
 "Audio Message" = "Audio Message";
+"Send now!" = "Send now!";
