--- a/Peppermint/pt-PT.lproj/Text.strings
+++ b/Peppermint/pt-PT.lproj/Text.strings
@@ -185,3 +185,4 @@
 "ago" = "atrás";
 "AUTOMATIC TRANSCRIPTION" = "Transcrição";
 "Transcription Preffered Default Language" = "pt-BR";
+"Send now!" = "Envie agora!";
