--- a/Peppermint/uk.lproj/Text.strings
+++ b/Peppermint/uk.lproj/Text.strings
@@ -188,3 +188,4 @@
 "ago" = "тому назад";
 "AUTOMATIC TRANSCRIPTION" = "ТРАНСКРИПЦіЯ";
 "Transcription Preffered Default Language" = "uk-UA";
+"Send now!" = "відправити зараз!";
