--- a/Peppermint/ru.lproj/Text.strings
+++ b/Peppermint/ru.lproj/Text.strings
@@ -193,3 +193,4 @@
 "ago" = "тому назад";
 "AUTOMATIC TRANSCRIPTION" = "ТРАНСКРИПЦИЯ";
 "Transcription Preffered Default Language" = "ru-RU";
+"Send now!" = "Отправьте сейчас!";
