--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -185,3 +185,4 @@
 "ago" = "önce";
 "AUTOMATIC TRANSCRIPTION" = "Transkripsiyon";
 "Transcription Preffered Default Language" = "tr-TR";
+"Send now!" = "Şimdi gönder!";
