--- a/Peppermint/uk.lproj/Text.strings
+++ b/Peppermint/uk.lproj/Text.strings
@@ -155,8 +155,8 @@
 "Today" = "Сьогодні";
 "Yesterday" = "Вчора";
 "Or email us for support" = "або надішліть листа";
-"Peppermint Support" = "Служба підтримки Peppermint";
-"Peppermint Support Explanation" = "Надішліть нам аудіо відгук про додаток";
+"Peppermint Support" = "Служба підтримки";
+"Peppermint Support Explanation" = "Аудіо відгук про додаток";
 "There are no recent contacts" = "Нещодавніх контактів немає";
 "To start seeing how easy it is to reply to emails, add an account"="Щоб побачити наскільки легко відповідати на листи, створіть обл.запис";
 "COMING SOON" = "СКОРО";
