- Russian Language Fix

--- a/Peppermint/ru.lproj/Text.strings
+++ b/Peppermint/ru.lproj/Text.strings
@@ -160,8 +160,8 @@
 "Today" = "Сегодня";
 "Yesterday" = "Вчера";
 "Or email us for support" = "или отправьте письмо";
-"Peppermint Support" = "Служба поддержки Peppermint";
-"Peppermint Support Explanation" = "Отправьте нам аудио отзыв о приложении";
+"Peppermint Support" = "Служба поддержки";
+"Peppermint Support Explanation" = "Аудио отзыв о приложении";
 "There are no recent contacts" = "Недавних контактов нет";
 "To start seeing how easy it is to reply to emails, add an account"="Чтоб увидеть насколько легко отвечать на письма, создайте уч.запись";
 "COMING SOON" = "СКОРО";
