--- a/Peppermint/ru.lproj/Text.strings
+++ b/Peppermint/ru.lproj/Text.strings
@@ -133,7 +133,7 @@
 "Year" = "Год";
 "Month" = "Мес.";
 "Day" = "Д.";
-"Hour" = "Час";
+"Hour" = "Ч.";
 "Minute" = "Мин.";
 "Second" = "Сек.";
 "Plural Suffix" = "";
