--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -185,5 +185,5 @@
 "ago" = "önce";
 "AUTOMATIC TRANSCRIPTION" = "Transkripsiyon";
 "Transcription Preffered Default Language" = "tr-TR";
-"Send now!" = "Şimdi gönder!";
+"Send now!" = "ve hemen gönder!";
 "MMM dd" = "dd MMM";
