Revert "- Transcription fix"
This reverts commit 97d8418d79e10ebaa47fc77db6adaf31de77d523.

--- a/Peppermint/tr.lproj/Text.strings
+++ b/Peppermint/tr.lproj/Text.strings
@@ -185,5 +185,5 @@
 "ago" = "önce";
 "AUTOMATIC TRANSCRIPTION" = "Transkripsiyon";
 "Transcription Preffered Default Language" = "tr-TR";
-"Send now!" = "ve hemen gönder!";
+"Send now!" = "Şimdi gönder!";
 "MMM dd" = "dd MMM";
