--- a/Peppermint/uk.lproj/Text.strings
+++ b/Peppermint/uk.lproj/Text.strings
@@ -188,5 +188,5 @@
 "ago" = "тому";
 "AUTOMATIC TRANSCRIPTION" = "ТРАНСКРИПЦіЯ";
 "Transcription Preffered Default Language" = "uk-UA";
-"Send now!" = "одразу надіслати!";
+"Send now!" = "Посуньте, щоб одразу надіслати!";
 "MMM dd" = "MMM dd";
